Legend:

[+] New/improved feature 
[B] Bug fixed
[K] Known issue
[O] Other

Change log
==========

v0.4

[+] Added systemd service.unit file for xdpd
[+] Added plugin event notification system. Supported events: port add/attach/detach/delete/status and monitoring status.
[+] Improved boot-strapping workflow.
[+] Added support for opaque string platform driver (fwd_module) initialization (also in the config file)
[+] Added system_manager and monitoring_manager APIs. 
[+] Improved command line options treatment (system_manager)
[+] Improved CMM debugging via new ROFL logger. Unified logging level (C/C++) setting at runtime (via system_manager).
[+][GNU/Linux] Improved I/O subsytem, including new packet classifier (c_pktclassifier).
[+][GNU/Linux] Adding support for stats in ioport_vlink.
[+][GNU/Linux] Added support for OF1.3.

[B][GNU/Linux] Fixed bug: not properly updating of_port_state in ioport_mmap ports when up/down events were done externally (i.e. ifconfig) 

v0.3.5 

[+] [GNU/Linux] Adding support for LLC frame parsing (ETH_TYPE)

v0.3.4

[+][NetFPGA-10G] Merged into mainstream support for the NetFPGA-10G platform (T.Sielach, M.Sune)
[B] Backport fixes on commit 25b49d52 and commit 9cdbc06c (devel-0.4); 'no port field and no prop-max-rate field in 1.0', 'invalid instructions reverse-mapping'
[O][GNU/Linux] Reducing default buffer expiration timeout (180s->10s)

v0.3.3

[+] Cleanup and improve of plugin system 
[+] Added README to xDPd main folder
[+] Added legend to CHANGE file 
[B] Fixed bug #122: "Autotools does not detect changes on the plugin code"
[B] xmp plugin: fixed bug in handling of listening socket in xmp::init()
[B] Added missing m4 file bug #125 "config/plugin_xmp.m4 missing"
[O] Deleted unused and unmaintained plugins

v0.3.2

[+] Added xmp management plugin
 